# adventOfCode

./: .gitignore  Arrays.php  Containerfile  Makefile  composer.json
2019/: 01.php  02.php  03.php  04.php  05.php  06.php  07.php  08.php  09.php  10.php  11.php  12.php  13.php  14.php  composer.json
2019/07/: input.txt
2019/13/: input.txt
2019/Computer/: Addr.php  Interpreter.php  RelAddr.php  ValueBase.php
2020/: 01.php  02.php  03.php  04.php  05.php  06.php  07.php  08.php  09.php  10.php  11.php  12.php  13.php  14.php  15.php  16.php  17.php  18.php
2021/: 01.php  02.php  03.php  04.php  05.php  06.php  07.php  08.php  09.php
2022/: 01.php  02.php  03.php  04.php  05.php  06.php  07.php  08.php  09.php  10.php  11.php  12.php
2025/: README.md  pyproject.toml  requirements.txt
2025/src/aoc2025/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  runner.py
2025/tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_runner.py
Computer/: AddrValue.php  Interpreter.php  Value.php
lib/: Dumper.php  InputLoader.php
scripts/: podman-dev.sh
