[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc2025"
version = "0.1.0"
description = "Advent of Code 2025 solutions"
requires-python = ">=3.11"
authors = [{ name = "sharkodlak" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
